# telstra-summariser

./: .env-sample  .gitignore  docker-compose.yml  dockerfile  main.py  requirements.txt  requirements_full.txt
app/: dockerfile  pyproject.toml
app/util/: log_config.py  myllm.py  summariser.py
static/: index.html
util/: load_from_s3.py  myllm.py  summariser.py
